# SpeedTrain

./: .env.example  .gitignore  .vercelignore  README.md  croo-agent.json  pyproject.toml  requirements-dev.txt  requirements.txt  vercel.json
app/: __init__.py  main.py  models.py
app/api/: routes.py
app/core/: __init__.py  agent_card.py  config.py
app/services/: groq_service.py
docs/: deployment.md  research.md
static/: app.js  index.html  styles.css
tests/: test_health.py
