[project]
name = "speechtrain"
version = "0.1.0"
description = "SpeechTrain AI agent scaffold using FastAPI and Groq."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "groq>=0.13.0",
    "pydantic-settings>=2.7.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.20",
    "uvicorn[standard]>=0.34.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.3.0",
    "ruff>=0.9.0",
]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.vercel]
entrypoint = "api/index.py"
